Fix sizing on smaller browser window

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -198,18 +198,13 @@
   width:         calc(40% - (#{$spacing-unit} / 2));
 }
 
-// @include media-query($on-laptop) {
-//   .home-col-1,
-//   .home-col-2 {
-//     width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-//     width:         calc(50% - (#{$spacing-unit} / 2));
-//   }
-
-//   .home-col-3 {
-//     width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-//     width:         calc(100% - (#{$spacing-unit} / 2));
-//   }
-// }
+@include media-query($on-laptop) {
+  .home-col {
+    float: none;
+    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+    width:         calc(100% - (#{$spacing-unit} / 2));
+  }
+}
 
 @include media-query($on-palm) {
   .home-col {
